tests/hevm/fail/shape-2/shape-2.act
// contract A
contract A

constructor(uint z)

creates
   uint x := z


transition x() : uint256

returns
   pre(x)

// contract C
contract C

constructor()

creates
   A a1 := new A(42)
   A a2 := new A(17)

transition change()

updates
  a1 := a2